3/07/2025 9:07: Beginning work on 1.05
3/07/2025 9:34: Making pc.c and pc.h
                adding to makefile
3/07/2025 9:57: organizing code
3/07/2025 10:15: New move.c and move.h
                for determining character movement
3/07/2025 10:20: new macros
                mappair and charpair from prof code
3/07/2025 10:35: added move_pc
                switch statement keybinds
3/07/2025 10:50: added new dungeon method
                added a generate dungeon whole floor for stairs
3/07/2025 11:08: moving methods
                moving eventSimUpdate to move.c. 
                Works better within this code
3/07/2025 11:30: new io
                to organize ncurses screen init
3/08/2025 2:30: Added in prof code     
                Added code from prof code due to buggy 1.04, Modified to my code
3/17/2025 8:00: changed whole code
                decided to work off of prof code